hphp/hack/test/typecheck/new_inference/fst_then_invoke_bad2.php.like_types.exp
File "fst_then_invoke_bad2.php", line 24, characters 16-17:
Invalid argument (Typing[4110])
File "fst_then_invoke_bad2.php", line 22, characters 27-27:
Expected ~D because it is an unenforceable type
File "fst_then_invoke_bad2.php", line 22, characters 14-14:
But got <expr#1>
File "fst_then_invoke_bad2.php", line 24, characters 12-13:
  where '<expr#1>' is a reference to this expression
